# WQRTQ

./: CMakeLists.txt  MQP.h  MQWK.h  MWK.h  main.cpp  minheap.h  operator.h
QuadProg/: Array.hh  QuadProg++.cc  QuadProg++.hh
RTree/: MemoryTest.cpp  RTree.h  Test.cpp
dataset/: NBA8D  test
